...
    <string name="nav_scan">Scan</string>
    <string name="nav_battle">Battle</string>
    <string name="nav_home">Home</string>
    <string name="nav_world">World</string>
    <string name="nav_dex">Dex</string>
    <string name="nav_card_adventure">Card adventure</string>
    <string name="nav_storage">Storage</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_more">More</string>
    <string name="nav_viewer">Viewer</string>
    <string name="nav_card">Card</string>
    <string name="nav_items">Items</string>
    <string name="nav_my_items">My items</string>
    <string name="nav_items_store">Items store</string>
    <string name="nav_apply_item">Apply item</string>
...
    <string name="dex_status_previously_obtained">Previously in app</string>
    <string name="dex_chara_unknown_name">\?\?\?\?\?\?\?\?\?\?\?\?\?\?\?\?</string>
    <string name="dex_chara_stats_unknown">HP: -, BP: -, AP: -</string>
    <string name="dex_chara_fusions_button">Jogress</string>
    <string name="dex_chara_close_button">Close</string>
    <string name="dex_species_title">Species information</string>
    <string name="dex_species_level">Level: %1$s</string>
    <string name="dex_species_type">Type: %1$s</string>
    <string name="dex_species_attribute">Attribute: %1$s</string>
    <string name="dex_species_special_moves">Special moves: %1$s</string>

    <string name="card_adventure_missions_title">Adventure missions</string>

...

    <string name="storage_character_image_description">Character image</string>
    <string name="storage_edit_digimon_info">Edit Digimon information</string>
    <string name="storage_send_to_watch">Send to watch</string>
    <string name="storage_send_to_vitalwear">Send to VitalWear</string>
    <string name="storage_set_active">Set active</string>
    <string name="storage_send_on_adventure">Send on adventure</string>
    <string name="storage_delete_character">Delete character</string>
    <string name="storage_delete_character_confirmation">Are you sure you want to delete this Digimon? This action cannot be undone.</string>
    <string name="storage_close">Close</string>

    <string name="home_vbdim_vitals">Vitals</string>
    <string name="home_vbdim_trophies">Trophies</string>
...
